<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_content"
        android:layout_width="320dp"
        android:layout_height="210dp"
        android:background="@drawable/rounded10_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_line_txvSub"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:lineSpacingExtra="7dp"
            android:text="@string/dialog_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginStart="39dp"
            android:layout_marginEnd="39dp"
            app:layout_constraintBottom_toTopOf="@id/btn_block_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_block_no"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/close"
            android:textSize="18sp"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded10_gray"
            app:layout_constraintEnd_toStartOf="@id/btn_block_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_block_ok"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:fontFamily="@font/pretendard_bold"
            android:background="@drawable/rounded10_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_block_no"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>